[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Actors/Overworld/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Actors/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Actors/CameraController.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=2]
resource_local_to_scene = true
margin = 0.001
radius = 0.32
height = 0.01

[sub_resource type="SphereShape" id=3]

[node name="Player" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 133
script = ExtResource( 2 )

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 2 )

[node name="SafeGroundRaycast" type="RayCast" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )

[node name="HarmDetector" type="Area" parent="." index="5"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="HarmDetector" index="0"]
shape = SubResource( 3 )

[node name="SpringArm" type="SpringArm" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501, 0 )
collision_mask = 32
spring_length = 3.0
margin = 0.2

[node name="Camera" type="Camera" parent="SpringArm" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
current = true
script = ExtResource( 5 )

[node name="HealthBar" parent="." index="8" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Jump" type="AudioStreamPlayer" parent="." index="9"]

[node name="Death" type="AudioStreamPlayer" parent="." index="10"]

[node name="Hurt" type="AudioStreamPlayer" parent="." index="11"]
